# cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build_clean_msvc.bat  build_mingw.bat  config.json  hmm_server_log.txt  requirements.txt
cmake/: CopySharedLibs.cmake  DownloadONNX.cmake  FindPybind11.cmake
data/: benchmark.csv  hmm.csv
docs/: api.html  examples.html  index.html  installation.html  styles.css  usage.html
hmm_saved/: hmm_model.csv  hmm_model.pkl
include/: APIDataSource.h  BacktestEngine.h  Bar.h  BenchmarkStrategy.h  Broker.h  CSVDataSource.h  CSVParserStep.h  ColumnSpec.h  Config.h  DataLoader.h  DataSource.h  FeatureMatrix.h  HMMModelInterface.h  HMMStrategy.h  ISignalGenerator.h  ITradingSignal.h  Indicator.h  JSONParserStep.h  MLStrategy.h  ModelBasedStrategy.h  ModelInterface.h  OnnxModelInterface.h  OnnxSignalGenerator.h  Order.h  ParserStep.h  Position.h  RSIIndicator.h  RSIStrategy.h  RandomStrategy.h  SMACrossStrategy.h  SMAIndicator.h  Strategy.h  TradingMetrics.h  TradingSignal.h  Utils.h  XGBoostModelInterface.h
scripts/: hmm_server.py  model_interface.py  predict_hmm.py  regime_pipeline.py  run_regime_backtest.py  start_hmm_server.bat  train_regime_models.py  train_xgboost.py  xgb_pipeline.py  xgb_trading_model.py
src/: APIDataSource.cpp  BacktestEngine.cpp  BenchmarkStrategy.cpp  Broker.cpp  CSVDataSource.cpp  CSVParserStep.cpp  Config.cpp  DataLoader.cpp  FeatureMatrix.cpp  HMMModelInterface.cpp  HMMStrategy.cpp  JSONParserStep.cpp  MLStrategy.cpp  ModelBasedStrategy.cpp  OnnxModelInterface.cpp  OnnxSignalGenerator.cpp  RSIIndicator.cpp  RandomStrategy.cpp  SMACrossStrategy.cpp  SMAIndicator.cpp  Strategy.cpp  TradingMetrics.cpp  Utils.cpp  XGBoostModelInterface.cpp  bindings.cpp  main.cpp
xgb_saved/: model_2.json
